src/objects/POS_Item_Desc_Bidl_dim__c.object
<CustomObject>
    <fields>
        <fullName>c_current_upc_code__c</fullName>
        <label>Current upc code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_family_group_desc__c</fullName>
        <label>Family group description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_global_category_desc__c</fullName>
        <label>Global category description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_global_subcategory_desc__c</fullName>
        <label>Global subcategory description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_item_desc__c</fullName>
        <label>Item description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_master_group_desc__c</fullName>
        <label>Mater group description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <label>Pos rev center code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_upc_item_desc__c</fullName>
        <label>Upc item description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i_family_group_id__c</fullName>
        <label>Family group Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_item_bidl_key__c</fullName>
        <label>Item bidl key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_item_id__c</fullName>
        <label>Item Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_master_group_id__c</fullName>
        <label>Mater group Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POS Item Desc Bidl dim</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POS Item Desc Bidl dim</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>